--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,12 @@
 body {
-    background-color: black;
+    background-color: antiquewhite;
 }
 
-h1 {
-    color: aliceblue;
+div {
+    width: 200px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
 }
