--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,12 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 body {
+    font-family: 'Lato', sans-serif;
     background-color: antiquewhite;
 }
 
-div {
-    width: 200px;
+h1, h2, h3 {
+    padding: 0;
+    margin: 0;
 }
 
-form {
+#page-wrapper {
+    min-height: 100vh;
+
+    display: grid;
+    grid-template-rows: 1fr 9fr;
+}
+
+header {
+    background-color: rgb(112, 112, 246);
+    
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header > h1 {
+    font-weight: 900;
+}
+
+
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+#sidebar {
+    border-radius: 10px;
+    border: 1px solid red;
+    padding: 5px;
+
     display: flex;
     flex-direction: column;
+    gap: 5px;
+}
+
+.wrapper,
+#projects-wrapper {
+    border: 1px solid black;
+    border-radius: inherit;
+
+    padding: 5px 10px;
+}
+
+
+
+#display-section {
+    background-color: white;
+}
+
+#display-section > div {
+    border: 1px solid black;
+    height: 100%;
+}
+
+.todo-box {
+    border: 1px solid black;
 }
