--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,6 +47,12 @@ main {
     gap: 5px;
 }
 
+#add-new-btn {
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    word-spacing: 1px;
+}
+
 .wrapper,
 #projects-wrapper {
     border: 1px solid black;
@@ -57,6 +63,12 @@ main {
 
 
 
+#indiv-proj-wrapper {
+    border:1px solid black;
+    padding: 3px 0;
+}
+
+
 #display-section {
     background-color: white;
 }
@@ -64,8 +76,24 @@ main {
 #display-section > div {
     border: 1px solid black;
     height: 100%;
+
+    padding: 5px 10px;
+}
+
+#display-section > div > h1 {
+    margin: 10px 0;
+}
+
+#todo-wrapper {
+    display:flex;
+    flex-direction: column;
+    gap:5px;
 }
 
 .todo-box {
     border: 1px solid black;
+
+    display: flex;
+    padding: 0 20px 0 5px;
 }
+
