--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -94,6 +94,27 @@ main {
     border: 1px solid black;
 
     display: flex;
-    padding: 0 20px 0 5px;
+    align-items: center;
+    padding: 16px 20px 16px 5px;
+}
+
+.todo-actions {
+    margin-left: auto;
+    
+    display: flex;
+    gap: 10px;
+}
+
+.todo-box p {
+    margin: 0;
+}
+
+.icons {
+    aspect-ratio: 1/1;
+    height: 1rem;
+}
+
+.icons.bl-chk {
+    height: 0.8rem;
 }
 
