add function to remove todo boxes
 - from DOM and from arrays
 - also included a method to "link" DOM obj with array data

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -71,11 +71,12 @@ main {
 
 #display-section {
     background-color: white;
+    border: 1px solid green;
 }
 
 #display-section > div {
     border: 1px solid black;
-    height: 100%;
+    height: auto;
 
     padding: 5px 10px;
 }
