--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,7 +47,12 @@ main {
     gap: 5px;
 }
 
-#add-new-btn {
+.folder-input {
+    border: 3px solid red;
+}
+
+#add-new-btn,
+.side-buttons {
     text-transform: uppercase;
     font-size: 0.7rem;
     word-spacing: 1px;
