--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -122,12 +122,26 @@ main {
 
 }
 
+.check-box {
+    margin-left:10px;
+}
+
+.check-box > img,
+.todo-actions > img:not(.prio-btn),
+.main-todo-wrapper > img {
+    cursor: pointer;
+}
+
 .todo-box {
     border: 1px solid black;
 
+    padding: 16px 20px 16px 5px;
+}
+
+.main-todo-wrapper {
     display: flex;
     align-items: center;
-    padding: 16px 20px 16px 5px;
+    gap: 10px;
 }
 
 .todo-actions {
@@ -156,4 +170,10 @@ main {
 
 .bottom-area > button {
     font-size: 1.5rem;
+}
+
+/* --- REMOVE POINTER EVENTS --- */
+
+.main-todo-wrapper p{
+    pointer-events: none;
 }
