improved styling on expanding todo
 - not ideal: expand btn and check box still moves after
   expand btn is clicked

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -135,13 +135,15 @@ main {
 .todo-box {
     border: 1px solid black;
 
-    padding: 16px 20px 16px 5px;
-}
-
-.main-todo-wrapper {
     display: flex;
     align-items: center;
     gap: 10px;
+
+    padding: 16px 20px 16px 5px;
+}
+
+.todo-expanding {
+    margin-top: 16px;
 }
 
 .todo-actions {
