add function to edit folder name

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -106,8 +106,10 @@ main {
     margin-bottom: 10px;
 }
 
-.header-name > h1 {
-    
+.header-name {
+    display: flex;
+    gap: 5px;
+    align-items: center;
 }
 
 .header-actions {
