--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -39,7 +39,7 @@ main {
 
 #sidebar {
     border-radius: 10px;
-    border: 1px solid red;
+    
     padding: 5px;
 
     display: flex;
@@ -48,7 +48,7 @@ main {
 }
 
 .folder-input {
-    border: 3px solid red;
+    
 }
 
 #add-new-btn,
@@ -59,8 +59,7 @@ main {
 }
 
 .wrapper,
-#projects-wrapper,
-#display-section {
+#projects-wrapper {
     border: 1px solid black;
     border-radius: inherit;
 
@@ -70,7 +69,7 @@ main {
 
 
 .indiv-proj-wrapper {
-    border:1px solid black;
+    /* border:1px solid black; */
     padding: 3px 0;
 
     cursor: pointer;
@@ -83,11 +82,11 @@ main {
 
 #display-section {
     background-color: white;
-    border: 1px solid green;
+    
 }
 
 #display-section > div {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: auto;
 
     padding: 5px 10px;
@@ -95,8 +94,12 @@ main {
 
 #display-section-wrapper {
     min-height: 98%;
+    
     display: flex;
     flex-direction: column;
+
+    position: relative;
+    overflow-y: hidden;
 }
 
 .header-div {
@@ -125,11 +128,14 @@ main {
 #todo-wrapper {
     order:2;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
 
     display:flex;
     flex-direction: column;
     gap:5px;
+
+    overflow-y: auto;
+    max-height: 75vh;
 
 }
 
@@ -190,8 +196,14 @@ main {
 .bottom-area {
     order:3;
 
-    border: 1px solid black;
     margin-top: auto;
+    
+    position: absolute;
+    bottom: 1%;
+
+    width: 98%;
+
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
 }
 
 .bottom-area > button {
@@ -245,4 +257,27 @@ dialog::backdrop {
 
 .main-todo-wrapper p{
     pointer-events: none;
+}
+
+/* --- SCROLL BAR --- */
+
+/* width */
+::-webkit-scrollbar {
+width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+background-color: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: rgb(190, 190, 190); 
+border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #989898; 
 }
