--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,283 +1,283 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 body {
-    font-family: 'Lato', sans-serif;
-    background-color: antiquewhite;
+	font-family: "Lato", sans-serif;
+	background-color: antiquewhite;
 }
 
-h1, h2, h3, h6 {
-    padding: 0;
-    margin: 0;
+h1,
+h2,
+h3,
+h6 {
+	padding: 0;
+	margin: 0;
 }
 
 #page-wrapper {
-    min-height: 100vh;
+	min-height: 100vh;
 
-    display: grid;
-    grid-template-rows: 1fr 9fr;
+	display: grid;
+	grid-template-rows: 1fr 9fr;
 }
 
 header {
-    background-color: rgb(112, 112, 246);
-    
+	background-color: rgb(112, 112, 246);
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 header > h1 {
-    font-weight: 900;
+	font-weight: 900;
 }
 
-
-
 main {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+	display: grid;
+	grid-template-columns: 1fr 4fr;
 }
 
 #sidebar {
-    border-radius: 10px;
-    
-    padding: 5px;
+	border-radius: 10px;
 
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+	padding: 5px;
+
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
 
 .folder-input {
-    
 }
 
 #add-new-btn,
 .side-buttons {
-    text-transform: uppercase;
-    font-size: 0.7rem;
-    word-spacing: 1px;
+	text-transform: uppercase;
+	font-size: 0.7rem;
+	word-spacing: 1px;
 }
 
 .wrapper,
 #projects-wrapper {
-    border: 1px solid black;
-    border-radius: inherit;
+	border: 1px solid black;
+	border-radius: inherit;
 
-    padding: 5px 10px;
+	padding: 5px 10px;
 }
 
-
-
 .indiv-proj-wrapper {
-    /* border:1px solid black; */
-    padding: 3px 0;
+	/* border:1px solid black; */
+	padding: 3px 0;
+	transition: all 0.2s ease-in-out;
 
-    cursor: pointer;
+	cursor: pointer;
+}
+
+.indiv-proj-wrapper:hover {
+	background-color: rgba(255, 255, 255, 0.603);
 }
 
 .indiv-proj-wrapper h3 {
-    pointer-events: none;
+	pointer-events: none;
 }
 
-
 #display-section {
-    background-color: white;
-    
+	background-color: white;
 }
 
 #display-section > div {
-    /* border: 1px solid black; */
-    height: auto;
+	/* border: 1px solid black; */
+	height: auto;
 
-    padding: 5px 10px;
+	padding: 5px 10px;
 }
 
 #display-section-wrapper {
-    min-height: 98%;
-    
-    display: flex;
-    flex-direction: column;
+	min-height: 98%;
 
-    position: relative;
-    overflow-y: hidden;
+	display: flex;
+	flex-direction: column;
+
+	position: relative;
+	overflow-y: hidden;
 }
 
 .header-div {
-    display:flex;
-    order:1;
+	display: flex;
+	order: 1;
 
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .header-name {
-    display: flex;
-    gap: 5px;
-    align-items: center;
+	display: flex;
+	gap: 5px;
+	align-items: center;
 }
 
 .header-actions {
-    margin-right: 10px;
-    margin-left: auto;
+	margin-right: 10px;
+	margin-left: auto;
 
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
 
 #todo-wrapper {
-    order:2;
+	order: 2;
 
-    /* border: 1px solid black; */
+	/* border: 1px solid black; */
 
-    display:flex;
-    flex-direction: column;
-    gap:5px;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 
-    overflow-y: auto;
-    max-height: 75vh;
-
+	overflow-y: auto;
+	max-height: 75vh;
 }
 
 .check-box {
-    margin-left:10px;
+	margin-left: 10px;
 }
 
 .check-box > img,
 .icons:not(.prio-btn),
 .main-todo-wrapper > img {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .todo-box {
-    border: 1px solid black;
+	border: 1px solid black;
 
-    display: flex;
-    align-items: center;
-    gap: 10px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
 
-    padding: 16px 20px 16px 5px;
+	padding: 16px 20px 16px 5px;
 }
 
 .todo-expanding {
-    margin-top: 16px;
+	margin-top: 16px;
 }
 
 .todo-actions {
-    margin-left: auto;
-    
-    display: flex;
-    gap: 10px;
+	margin-left: auto;
+
+	display: flex;
+	gap: 10px;
 }
 
 .todo-box p {
-    margin: 0;
+	margin: 0;
 }
 
 .status-done {
-    background-color: rgb(151, 206, 151);
+	background-color: rgb(151, 206, 151);
 }
 
 .big-icons {
-    aspect-ratio: 1/1;
-    height: 1.5rem;
-    cursor: pointer;
+	aspect-ratio: 1/1;
+	height: 1.5rem;
+	cursor: pointer;
 }
 
 .icons {
-    aspect-ratio: 1/1;
-    height: 1rem;
+	aspect-ratio: 1/1;
+	height: 1rem;
 }
 
 .icons.bl-chk {
-    height: 0.8rem;
+	height: 0.8rem;
 }
 
 .bottom-area {
-    order:3;
+	order: 3;
 
-    margin-top: auto;
-    
-    position: absolute;
-    bottom: 1%;
+	margin-top: auto;
 
-    width: 98%;
+	position: absolute;
+	bottom: 1%;
 
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
+	width: 98%;
+
+	background: linear-gradient(
+		0deg,
+		rgba(255, 255, 255, 1) 0%,
+		rgba(255, 255, 255, 1) 50%,
+		rgba(255, 255, 255, 0) 100%
+	);
 }
 
 .bottom-area > button {
-    font-size: 1.5rem;
+	font-size: 1.5rem;
 
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 /* --- MODAL AND FORM --- */
 
 dialog {
-    border: 0;
-    border-radius: 3px;
+	border: 0;
+	border-radius: 3px;
 }
 
 dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0.386);
-    backdrop-filter: blur(2px);
+	background-color: rgba(0, 0, 0, 0.386);
+	backdrop-filter: blur(2px);
 }
 
 .modal-wrapper,
 #toDoDetails {
-    display:flex;
-    flex-direction: column;
-    gap: 5px;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
 
 #toDoDetails > div {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 #toDoDetails > div > span {
-    font-size: 0.7rem;
-    font-weight: 700;
-    color: rgb(176, 11, 11);
-    text-transform: uppercase;
+	font-size: 0.7rem;
+	font-weight: 700;
+	color: rgb(176, 11, 11);
+	text-transform: uppercase;
 }
 
 #toDoDetails > div:last-child {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 3px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 3px;
 }
-
-
-
 
 /* --- REMOVE POINTER EVENTS --- */
 
-.main-todo-wrapper p{
-    pointer-events: none;
+.main-todo-wrapper p {
+	pointer-events: none;
 }
 
 /* --- SCROLL BAR --- */
 
 /* width */
 ::-webkit-scrollbar {
-width: 10px;
+	width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-background-color: transparent;
+	background-color: transparent;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-background: rgb(190, 190, 190); 
-border-radius: 10px;
+	background: rgb(190, 190, 190);
+	border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-background: #989898; 
+	background: #989898;
 }
